// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders default input with label and feedback 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-input om-react-ui-input-large om-react-ui-input-default"
      >
        <div
          class="om-react-ui-input-label-row"
        >
          <label
            class="om-react-ui-input-label"
            for="«r0»"
          >
            Amount
          </label>
        </div>
        <div
          class="om-react-ui-input-description"
        >
          0.00 USDT available
        </div>
        <div
          class="om-react-ui-input-control-wrapper"
        >
          <div
            class="om-react-ui-input-control"
          >
            <input
              class="om-react-ui-input-field"
              id="«r0»"
              placeholder="Value"
              value=""
            />
          </div>
        </div>
        <div
          class="om-react-ui-input-feedback"
        >
          Feedback
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-input om-react-ui-input-large om-react-ui-input-default"
    >
      <div
        class="om-react-ui-input-label-row"
      >
        <label
          class="om-react-ui-input-label"
          for="«r0»"
        >
          Amount
        </label>
      </div>
      <div
        class="om-react-ui-input-description"
      >
        0.00 USDT available
      </div>
      <div
        class="om-react-ui-input-control-wrapper"
      >
        <div
          class="om-react-ui-input-control"
        >
          <input
            class="om-react-ui-input-field"
            id="«r0»"
            placeholder="Value"
            value=""
          />
        </div>
      </div>
      <div
        class="om-react-ui-input-feedback"
      >
        Feedback
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Input renders with prefix and suffix 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-input om-react-ui-input-large om-react-ui-input-default"
      >
        <div
          class="om-react-ui-input-control-wrapper"
        >
          <div
            class="om-react-ui-input-control"
          >
            <span
              class="om-react-ui-input-prefix"
            >
              <span>
                USD
              </span>
            </span>
            <input
              class="om-react-ui-input-field"
              id="«r1»"
              value="100"
            />
            <span
              class="om-react-ui-input-suffix"
            >
              <button
                type="button"
              >
                Max
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-input om-react-ui-input-large om-react-ui-input-default"
    >
      <div
        class="om-react-ui-input-control-wrapper"
      >
        <div
          class="om-react-ui-input-control"
        >
          <span
            class="om-react-ui-input-prefix"
          >
            <span>
              USD
            </span>
          </span>
          <input
            class="om-react-ui-input-field"
            id="«r1»"
            value="100"
          />
          <span
            class="om-react-ui-input-suffix"
          >
            <button
              type="button"
            >
              Max
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
